--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=dev nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
